# CMakeTEST

./: .gitmodules  CMakeLists.txt  GenerateProject-Win32（仅供演示）.bat  GenerateProject-x64.bat
CMakeTEST/: CMakeLists.txt
CMakeTEST/src/: Main.cpp
Message/: CMakeLists.txt
